implement add torrent via movieId